--- a/components/Hero/hero.module.css
+++ b/components/Hero/hero.module.css
@@ -14,14 +14,13 @@
   width: 40%;
 }
 
-.hero__subtitle img {
-  width: 30px;
+.hero__subtitle span {
   margin: 0 5px;
-  margin-bottom: -8px;
+  margin-bottom: -15px;
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
 }
 
-.hero__subtitle img:hover {
+.hero__subtitle span:hover {
   transform: scale(1.3) rotate(22.5deg);
 }
