fix: 🐛 responsive bug (again !)

--- a/components/Hero/hero.module.css
+++ b/components/Hero/hero.module.css
@@ -21,7 +21,7 @@
 
 @media only screen and (max-width: 672px) {
   .hero {
-    padding: var(--spacing-12) var(--spacing-6);
+    padding: var(--spacing-12) 0;
     width: 100%;
   }
 }
