--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,5 @@
 @import "./theme.css";
 
-html {
-  font-size: 20px;
-}
-
 body {
   background-color: var(--grayscale-offBlack);
   margin: 0;
@@ -11,6 +7,7 @@ body {
   line-height: 0;
   font-family: "Poppins", sans-serif;
   width: 100%;
+  font-size: 20px;
 }
 
 h1 {
@@ -19,4 +16,10 @@ h1 {
   line-height: 32px;
   letter-spacing: 1px;
   color: var(--grayscale-offWhite);
+}
+
+@media only screen and (max-width: 672px) {
+  body {
+    font-size: 16px;
+  }
 }
