--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -1,6 +1,6 @@
 .layout {
   padding: 0 var(--padding-x);
-  width: 100%;
+  width: calc(100% - calc(var(--padding-x) * 2));
 }
 
 @media only screen and (max-width: 672px) {
